[CLOUDTRUST-2674] Add method to export users
