# api/management/swagger-api_management.yaml
@@ -241,6 +241,29 @@ paths:
                     type: array
                     items:
                       $ref: '#/components/schemas/User'
+  /realms/{realm}/export-users:
+    get:
+      tags:
+      - Users
+      summary: >
+        Export users information.
+        Returns a list of users.
+      parameters:
+      - name: realm
+        in: path
+        description: Name of the realm
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/UserExport'
   /realms/{realm}/users/{userID}:
     get:
       tags:
@@ -1622,6 +1645,37 @@ components:
       properties:
         enabled:
           type: boolean
+    UserExport:
+      type: object
+      properties:
+        id:
+          type: string
+        username:
+          type: string
+        firstName:
+          type: string
+        lastName:
+          type: string
+        email:
+          type: string
+        emailVerified:
+          type: boolean
+          default: false
+        phoneNumber:
+          type: string
+        phoneNumberVerified:
+          type: boolean
+          default: false
+        accountStatus:
+          type: string
+        authenticatorsNumber:
+          type: int
+        createdTimestamp:
+          type: integer
+          format: int64
+        lastConnectionTimestamp:
+          type: integer
+          format: int64
     Client:
       type: object
       properties:
